Tracing: keep track of agents that are tracing

Instead of asking all agents to keep track of whether they are currently
tracing or not and bail out of StopAndFlush if they are not tracing, the
coordinator only sends StopAndFlush to an agent if the agent has successfully
started tracing.

BUG=774728

Change-Id: I79801d5c66a454ee3bb1ea4c6729039e81c61a82
Reviewed-on: https://chromium-review.googlesource.com/721967
Commit-Queue: Ehsan Chiniforooshan <chiniforooshan@chromium.org>
Reviewed-by: oysteine <oysteine@chromium.org>
Cr-Commit-Position: refs/heads/master@{#509439}
Former-commit-id: 6588f9b2158846757d9da3ee30ed386e845e64cc