content/browser/tracing/cros_tracing_agent.cc
@@ -49,7 +49,6 @@ void CrOSTracingAgent::StartTracing(
   base::trace_event::TraceConfig trace_config(config);
   debug_daemon_ = chromeos::DBusThreadManager::Get()->GetDebugDaemonClient();
   if (!trace_config.IsSystraceEnabled() || !debug_daemon_) {
-    debug_daemon_ = nullptr;
     callback.Run(false /* success */);
     return;
   }
@@ -63,8 +62,7 @@ void CrOSTracingAgent::StartTracing(
 }
 
 void CrOSTracingAgent::StopAndFlush(tracing::mojom::RecorderPtr recorder) {
-  if (!debug_daemon_)
-    return;
+  DCHECK(debug_daemon_);
   recorder_ = std::move(recorder);
   debug_daemon_->StopAgentTracing(base::BindRepeating(
       &CrOSTracingAgent::RecorderProxy, base::Unretained(this)));
